--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": " An application that can be used to write, save, and delete notes which will an express backend and save and retrieve note data from a JSON file.",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/smaji08/NoteTaker#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
